After db migration and first seed

--- a/FrienOrganizer.DataAccess/FriendOrganizer.DataAccess.csproj
+++ b/FrienOrganizer.DataAccess/FriendOrganizer.DataAccess.csproj
@@ -51,6 +51,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FriendOrganizerDbContext.cs" />
+    <Compile Include="Migrations\202001121502018_InitialDatabase.cs" />
+    <Compile Include="Migrations\202001121502018_InitialDatabase.designer.cs">
+      <DependentUpon>202001121502018_InitialDatabase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +67,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202001121502018_InitialDatabase.resx">
+      <DependentUpon>202001121502018_InitialDatabase.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
