Moving to GitHub

--- a/FrienOrganizer.DataAccess/App.config
+++ b/FrienOrganizer.DataAccess/App.config
@@ -8,7 +8,7 @@
     </configSections>
   <connectionStrings>
     <add name="FriendOrganizerDb"
-         connectionString="Data Source=.;Initial Catalog=FriendOrganizer;Integrated Security=True"
+         connectionString="Data Source=KOROMPAI-DELL\SQLEXPRESS;Initial Catalog=FriendOrganizer;Integrated Security=True"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
